--- a/app/assets/stylesheets/projects.css
+++ b/app/assets/stylesheets/projects.css
@@ -5,16 +5,17 @@
   margin: 10px 0;
   width: 100%;
   height: 100%;
-  font-family: 'EB Garamond', serif
+  font-family: 'EB Garamond', serif;
 }
 
 .project-list {
   margin-top: 15px;
   padding: 18px 10px;
-  height: 70vh;
   background-color: #373737;
   box-shadow: 3px 5px 6px -2px rgba(0,0,0,0.66);
   color: #DCD0C0;
+  font-size: 24px;
+  height: 70vh;
 }
 
 .project-tile {
@@ -32,5 +33,7 @@
 
 .project {
   width: 75%;
+  height: 76.5vh;
+  overflow-y: scroll;
   padding: 0 20px;
 }
