--- a/app/assets/stylesheets/tile.css
+++ b/app/assets/stylesheets/tile.css
@@ -3,4 +3,5 @@
   color: #373737;
   box-shadow: 3px 5px 6px -2px rgba(0,0,0,0.66);
   margin: 15px;
+  white-space: pre-wrap;
 }
